Wrapper/C C++/audiogenie3.h

DllImport BSTR __stdcall ID3V2GetPossibleCHAPIDW();
DllImport BSTR __stdcall ID3V2GetPossibleTOCIDW();
DllImport BSTR __stdcall ID3V2GetPrivateFrameURLW(short Index);
DllImport BSTR __stdcall ID3V2GetRelativeVolumeAdjustmentIdentifierW(short Index);
DllImport BSTR __stdcall ID3V2GetSubFrameDescriptionW(LPCWSTR ID, short Index);
DllImport BSTR __stdcall ID3V2GetSubFrameTextW(LPCWSTR ID, short Index);
DllImport BSTR __stdcall ID3V2GetSyncLyricDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetSyncLyricLanguageW(short Index);
DllImport BSTR __stdcall ID3V2GetSyncLyricW(short Index);
DllImport BSTR __stdcall ID3V2GetTextFrameW(u32 FrameID);
DllImport BSTR __stdcall ID3V2GetTOCRootIDW();
DllImport BSTR __stdcall ID3V2GetUniqueFileIdentifierOwnerW(short Index);
DllImport BSTR __stdcall ID3V2GetURLFrameW(u32 FrameID);
DllImport BSTR __stdcall ID3V2GetUserFrameLanguageW(short Index);
DllImport BSTR __stdcall ID3V2GetUserFrameW(short Index);
DllImport BSTR __stdcall ID3V2GetUserTextDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetUserTextW(short Index);
DllImport BSTR __stdcall ID3V2GetUserURLDescriptionW(short Index);
DllImport BSTR __stdcall ID3V2GetUserURLW(short Index);
DllImport BSTR __stdcall ID3V2GetVersionW();
DllImport BSTR __stdcall LYRICSGetAlbumW();
DllImport BSTR __stdcall LYRICSGetArtistW();
DllImport BSTR __stdcall LYRICSGetAuthorW();
DllImport BSTR __stdcall LYRICSGetGenreW();
DllImport BSTR __stdcall LYRICSGetImageLinkW();
DllImport BSTR __stdcall LYRICSGetIndicationW();
DllImport BSTR __stdcall LYRICSGetInformationW();
DllImport BSTR __stdcall LYRICSGetLyricsW();
DllImport BSTR __stdcall LYRICSGetTitleW();
DllImport BSTR __stdcall LYRICSGetVersionW();
DllImport BSTR __stdcall MONKEYGetCompressionW();
DllImport BSTR __stdcall MP4GetAllFrameIDsW();
DllImport BSTR __stdcall MP4GetGenreW();
DllImport BSTR __stdcall MP4GetiTuneFrameW(LPCWSTR FrameID);
DllImport BSTR __stdcall MP4GetPictureMimeW(short Index);
DllImport BSTR __stdcall MP4GetTextFrameW(u32 FrameID);
DllImport BSTR __stdcall MP4GetTrackW();
DllImport BSTR __stdcall MP4GetVersionW();
DllImport float __stdcall MONKEYGetCompressionRatioW();
DllImport float __stdcall MONKEYGetPeakW();
DllImport long __stdcall ID3V2GetPositionSynchronisationValueW();
DllImport long __stdcall ID3V2GetPrivateFrameDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetRecommendedBufferSizeOffsetW();
DllImport long __stdcall ID3V2GetRecommendedBufferSizeValueW();
DllImport long __stdcall ID3V2GetRelativeVolumeAdjustmentDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetSeekOffsetW();
DllImport long __stdcall ID3V2GetSignatureFrameDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall ID3V2GetSizeW();
DllImport long __stdcall ID3V2GetSubFrameImageW(BYTE *arr, u32 maxLen, LPCWSTR ID, short Index);
DllImport long __stdcall ID3V2GetSynchronizedTempoDataW(BYTE *arr, u32 maxLen);
DllImport long __stdcall ID3V2GetUniqueFileIdentifierDataW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall LYRICSGetSizeW();
DllImport long __stdcall LYRICSGetStartPositionW();
DllImport long __stdcall MONKEYGetFramesW();
DllImport long __stdcall MONKEYGetSamplesPerFrameW();
DllImport long __stdcall MONKEYGetSamplesW();
DllImport long __stdcall MP4GetPictureArrayW(BYTE *arr, u32 maxLen, short Index);
DllImport long __stdcall MP4GetPictureCountW();
DllImport short __stdcall ID3V2AddSeekOffsetW(long offset);
DllImport short __stdcall ID3V2GetPopularimeterRatingW(short Index);
DllImport short __stdcall ID3V2GetPositionSynchronisationTimestampFormatW();
DllImport short __stdcall ID3V2GetRecommendedBufferSizeFlagW();
DllImport short __stdcall ID3V2GetReverbBouncesLeftW();
DllImport short __stdcall ID3V2GetReverbBouncesRightW();
DllImport short __stdcall ID3V2GetReverbFeedbackLeftToLeftW();
DllImport short __stdcall ID3V2GetReverbFeedbackLeftToRightW();
DllImport short __stdcall ID3V2GetReverbFeedbackRightToLeftW();
DllImport short __stdcall ID3V2GetReverbFeedbackRightToRightW();
DllImport short __stdcall ID3V2GetReverbLeftW();
DllImport short __stdcall ID3V2GetReverbPremixLeftToRightW();
DllImport short __stdcall ID3V2GetReverbPremixRightToLeftW();
DllImport short __stdcall ID3V2GetReverbRightW();
DllImport short __stdcall ID3V2GetSignatureFrameGroupSymbolW(short Index);
DllImport short __stdcall ID3V2GetSubFrameImageTypeW(LPCWSTR ID, short Index);
DllImport short __stdcall ID3V2GetSubFramesW(LPCWSTR ID);
DllImport short __stdcall ID3V2GetSubFrameTypeW(LPCWSTR ID, short Index);
DllImport short __stdcall ID3V2GetSynchronizedTempoFormatW();
DllImport short __stdcall ID3V2GetSyncLyricContentTypeW(short Index);
DllImport short __stdcall ID3V2GetSyncLyricTimeFormatW(short Index);
DllImport short __stdcall ID3V2GetTOCIsOrderedW(LPCWSTR ID);
DllImport short __stdcall ID3V2ImportCueFileW(LPCWSTR FileName);
DllImport short __stdcall ID3V2RemoveTagFromFileW(LPCWSTR FileName);
DllImport short __stdcall ID3V2RemoveTagW();
DllImport short __stdcall ID3V2SaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall ID3V2SaveChangesW();
DllImport short __stdcall ID3V2SetAddendumDescriptionW(LPCWSTR ID, LPCWSTR newDescription);
DllImport short __stdcall ID3V2SetAddendumTitleW(LPCWSTR ID, LPCWSTR newTitle);
DllImport short __stdcall ID3V2SetChapterTimesW(LPCWSTR ID, u32 startTime, u32 endTime);
DllImport short __stdcall ID3V2SetFormatAndEncodingW(short format, short encoding);
DllImport short __stdcall ID3V2SetImageSubFrameW(BYTE *arr, u32 maxLen, LPCWSTR ID, LPCWSTR Description, short PictureType);
DllImport short __stdcall ID3V2SetTextSubFrameW(LPCWSTR ID, long FrameID, LPCWSTR textString, LPCWSTR description);
DllImport short __stdcall ID3V2SetTOCIsOrderedW(LPCWSTR ID, short status);
DllImport short __stdcall ID3V2SetURLSubFrameW(LPCWSTR ID, long FrameID, LPCWSTR urlString, LPCWSTR description);
DllImport short __stdcall LYRICSExistsW();
DllImport short __stdcall LYRICSRemoveTagFromFileW(LPCWSTR FileName);
DllImport short __stdcall LYRICSRemoveTagW();
DllImport short __stdcall LYRICSSaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall LYRICSSaveChangesW();
DllImport short __stdcall MONKEYGetBitsW();
DllImport short __stdcall MP4GetPictureFileW(LPCWSTR FileName, short Index);
DllImport short __stdcall MP4SaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall MP4SaveChangesW();
DllImport u32 __stdcall ID3V2GetSubFrameIDW(LPCWSTR ID, short Index);
DllImport void __stdcall ID3V2SetGenreW(LPCWSTR textString);
DllImport void __stdcall ID3V2SetPlayCounterW(long counter);
DllImport void __stdcall ID3V2SetTextFrameW(u32 FrameID, LPCWSTR textString);
DllImport void __stdcall ID3V2SetURLFrameW(u32 FrameID, LPCWSTR textString);
DllImport void __stdcall LYRICSSetAlbumW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetArtistW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetAuthorW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetGenreW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetImageLinkW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetIndicationW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetInformationW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetLyricsW(LPCWSTR textString);
DllImport void __stdcall LYRICSSetTitleW(LPCWSTR textString);
DllImport void __stdcall MP4DeleteEntriesW();
DllImport void __stdcall MP4SetGenreW(LPCWSTR textString);
DllImport void __stdcall MP4SetiTuneFrameW(LPCWSTR FrameID, LPCWSTR textString);