Wrapper/VB6/clsAudioGenie.cls

Private Declare Function ID3V2GetPopularimeterRatingW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetPositionSynchronisationTimestampFormatW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetPositionSynchronisationValueW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetPossibleCHAPIDW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetPossibleTOCIDW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetPrivateFrameDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetPrivateFrameURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetRecommendedBufferSizeFlagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetRecommendedBufferSizeOffsetW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetRecommendedBufferSizeValueW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetRelativeVolumeAdjustmentDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetRelativeVolumeAdjustmentIdentifierW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetReverbBouncesLeftW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbBouncesRightW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbFeedbackLeftToLeftW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbFeedbackLeftToRightW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbFeedbackRightToLeftW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbFeedbackRightToRightW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbLeftW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbPremixLeftToRightW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbPremixRightToLeftW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetReverbRightW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetSeekOffsetW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetSignatureFrameDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetSignatureFrameGroupSymbolW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function ID3V2GetSubFrameDescriptionW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As String
Private Declare Function ID3V2GetSubFrameIDW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetSubFrameImageTypeW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetSubFrameImageW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal ID As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetSubFrameTextW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As String
Private Declare Function ID3V2GetSubFrameTypeW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetSubFramesW Lib "AudioGenie3.dll" (ByVal ID As Long) As Integer
Private Declare Function ID3V2GetSyncLyricContentTypeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetSyncLyricDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetSyncLyricLanguageW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetSyncLyricTimeFormatW Lib "AudioGenie3.dll" (ByVal Index As Integer) As Integer
Private Declare Function ID3V2GetSyncLyricW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetSynchronizedTempoDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long) As Long
Private Declare Function ID3V2GetSynchronizedTempoFormatW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2GetTOCIsOrderedW Lib "AudioGenie3.dll" (ByVal ID As Long) As Integer
Private Declare Function ID3V2GetTOCRootIDW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2GetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long) As String
Private Declare Function ID3V2GetURLFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long) As String
Private Declare Function ID3V2GetUniqueFileIdentifierDataW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function ID3V2GetUniqueFileIdentifierOwnerW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserFrameLanguageW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserFrameW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserTextDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserTextW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserURLDescriptionW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetUserURLW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function ID3V2GetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V2ImportCueFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function ID3V2RemoveTagFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function ID3V2RemoveTagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2SaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function ID3V2SaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V2SetAddendumDescriptionW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal newDescription As Long) As Integer
Private Declare Function ID3V2SetAddendumTitleW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal newTitle As Long) As Integer
Private Declare Function ID3V2SetChapterTimesW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal startTime As Long, ByVal endTime As Long) As Integer
Private Declare Function ID3V2SetFormatAndEncodingW Lib "AudioGenie3.dll" (ByVal format As Integer, ByVal encoding As Integer) As Integer
Private Declare Sub ID3V2SetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function ID3V2SetImageSubFrameW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal ID As Long, ByVal Description As Long, ByVal PictureType As Integer) As Integer
Private Declare Sub ID3V2SetPlayCounterW Lib "AudioGenie3.dll" (ByVal Counter As Long)
Private Declare Function ID3V2AddSeekOffsetW Lib "AudioGenie3.dll" (ByVal offset As Long) As Integer
Private Declare Function ID3V2SetTOCIsOrderedW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal status As Integer) As Integer
Private Declare Sub ID3V2SetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal textString As Long)
Private Declare Function ID3V2SetTextSubFrameW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal frameID As Long, ByVal textString As Long, ByVal Description As Long) As Integer
Private Declare Sub ID3V2SetURLFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal textString As Long)
Private Declare Function ID3V2SetURLSubFrameW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal frameID As Long, ByVal urlString As Long, ByVal Description As Long) As Integer
Private Declare Function LYRICSExistsW Lib "AudioGenie3.dll" () As Integer
Private Declare Function LYRICSGetAlbumW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetArtistW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetAuthorW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetImageLinkW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetIndicationW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetInformationW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetLyricsW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function LYRICSGetStartPositionW Lib "AudioGenie3.dll" () As Long
Private Declare Function LYRICSGetTitleW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSGetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function LYRICSRemoveTagFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function LYRICSRemoveTagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function LYRICSSaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function LYRICSSaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub LYRICSSetAlbumW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetArtistW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetAuthorW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetImageLinkW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetIndicationW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetInformationW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetLyricsW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub LYRICSSetTitleW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function MONKEYGetBitsW Lib "AudioGenie3.dll" () As Integer
Private Declare Function MONKEYGetCompressionRatioW Lib "AudioGenie3.dll" () As Single
Private Declare Function MONKEYGetCompressionW Lib "AudioGenie3.dll" () As String
Private Declare Function MONKEYGetFramesW Lib "AudioGenie3.dll" () As Long
Private Declare Function MONKEYGetPeakW Lib "AudioGenie3.dll" () As Single
Private Declare Function MONKEYGetSamplesPerFrameW Lib "AudioGenie3.dll" () As Long
Private Declare Function MONKEYGetSamplesW Lib "AudioGenie3.dll" () As Long
Private Declare Function MP4GetiTuneFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long) As String
Private Declare Function MP4GetTextFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long) As String
Private Declare Function MP4GetAllFrameIDsW Lib "AudioGenie3.dll" () As String
Private Declare Function MP4GetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function MP4GetPictureArrayW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Index As Integer) As Long
Private Declare Function MP4GetPictureMimeW Lib "AudioGenie3.dll" (ByVal Index As Integer) As String
Private Declare Function MP4GetPictureCountW Lib "AudioGenie3.dll" () As Long
Private Declare Function MP4GetPictureFileW Lib "AudioGenie3.dll" (ByVal FileName As Long, ByVal Index As Integer) As Integer
Private Declare Function MP4GetTrackW Lib "AudioGenie3.dll" () As String
Private Declare Function MP4GetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function MP4SaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function MP4SaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub MP4DeleteEntriesW Lib "AudioGenie3.dll" ()
Private Declare Sub MP4SetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub MP4SetiTuneFrameW Lib "AudioGenie3.dll" (ByVal frameID As Long, ByVal newText As Long)
